[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/bird.png" type="Texture" id=1]
[ext_resource path="res://assets/egg.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player.gd" type="Script" id=3]

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="SpriteBird" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.15, 0.15 )
z_index = 100
texture = ExtResource( 1 )

[node name="SpriteEgg" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="TweenPosition" type="Tween" parent="."]
